<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">7MA运维</string>

    <string name="footer_text01">点击加载更多 </string>
    <string name="footer_text02">正在加载中，请您稍等...</string>
    <string name="footer_text03">已无更多</string>
    <string name="footer_text04">刷新失败，请重试</string>
    <string name="footer_text05">暂无信息</string>
    
    <string name="fetching">获取中……</string>
    
    <string name="scan_tips">将二维码放入框内, 即可自动扫描</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>

    <string name="scan_device">设备列表</string>
    <string name="refresh">刷新</string>
    <string name="Searching">正在搜索...</string>
    <string name="search_over">搜索结束</string>
    <string name="connect_status">连接状态：</string>
    <string name="device_version">固件版本：</string>
    <string name="battery">当前电量：</string>
    <string name="current_cz">当前操作：</string>
    <string name="open_count">开锁次数：</string>
    <string name="Open">开锁</string>
    <string name="auto_open">自动开锁</string>
    <string name="lock_status">获取锁状态</string>
    <string name="reset_lock">复位／关锁</string>
    <string name="wx_auth">扫码入库</string>
    <string name="mts">马蹄锁</string>
    <string name="ys">圆锁</string>
    <string name="Lock_success">当前操作：上锁成功</string>
    <string name="Lock_timeout">当前操作：上锁超时</string>
    <string name="opened">当前操作：锁已开启</string>
    <string name="closeed">当前操作：锁已关闭</string>
    <string name="reset_fail">当前操作：复位失败</string>
    <string name="reset_success">当前操作：复位成功</string>
    <string name="open_success">当前操作：开锁成功</string>
    <string name="open_fail">当前操作：开锁失败</string>
    <string name="battery_success">当前操作：获取电量成功</string>
    <string name="battery_fail">当前操作：获取电量失败</string>
    <string name="loading">正在连接...</string>
    <string name="is_empty">mac地址或二维码不能为空</string>
</resources>
